# ShetranOptimiser

./: .gitignore  CITATION.cff  README.md  main.py  optimiser.py  pyproject.toml  results_analysis.py  shetran_interaction.py
src/shetran-optimise/: main.py  optimiser.py  shetran_interaction.py
src/shetran_optimise/: cli.py  main.py  optimiser.py  results_analysis.py  settings.py  shetran_interaction.py
templates/: config.json  settings.txt
