[project]
name = "shetranoptimiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dill>=0.4.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pymoo>=0.6.1.6",
]

[project.scripts]
shetran-optimise = "shetran_optimise.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shetran_optimise"]